--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -163,7 +163,7 @@
 
                 </div> <!-- end s-footer__social -->
 
-                <div class="col-five md-full end s-footer__subscribe">
+                <!--<div class="col-five md-full end s-footer__subscribe">
 
                     <h4>Our Newsletter</h4>
                     <div class="subscribe-form">
@@ -178,7 +178,7 @@
                         </form>
                     </div>
 
-                </div> <!-- end s-footer__subscribe -->
+                </div>--> <!-- end s-footer__subscribe -->
 
             </div>
         </div> <!-- end s-footer__main -->
