--- a/Blog/Views/Category/Index.cshtml
+++ b/Blog/Views/Category/Index.cshtml
@@ -26,7 +26,7 @@
             {
                 <article class="masonry__brick entry format-standard" data-aos="fade-up">
 
-                    <div class="entry__thumb">
+                    <div class="entry__thumb text-center">
                         <a href="@Url.Action("Index", "Article", new { id = article.Id })" class="entry__thumb-link">
                             @if (!string.IsNullOrEmpty(article.PhotoPath))
                             {
